@@ -7,7 +7,7 @@
     <meta name="keywords" content="${html_keywords?if_exists}">
     <meta name="description" content="${html_description?if_exists}">
     <#assign defaultMenuName = sri.screenUrlInfo.targetScreen.getDefaultMenuName()>
-    <title><#if html_title?has_content>${html_title}<#else>${ec.l10n.localize((ec.tenant.tenantName)!'Moqui')}<#if defaultMenuName?has_content> - ${defaultMenuName}</#if></#if></title>
+    <title><#if html_title?has_content>${html_title}<#else>${ec.l10n.localize((ec.tenant.tenantName)!'Moqui')}<#if defaultMenuName?has_content> - ${ec.resource.expand(defaultMenuName, "")}</#if></#if></title>
     <link rel="apple-touch-icon" href="/MoquiLogo100.png"/>
 <#-- Style Sheets -->
 <#list sri.getThemeValues("STRT_STYLESHEET") as styleSheetLocation>
